Closed Bug 339914 Opened 20 years ago Closed 20 years ago

Coverity leak in NSS_CMSEncoder_Start error paths

Categories

(NSS :: Libraries, defect, P2)

3.11.1
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.2

People

(Reporter: nelson, Assigned: nelson)

Details

(Keywords: coverity, memory-leak, Whiteboard: CID 574)

Attachments

(1 file)

Coverity CID 574 In function NSS_CMSEncoder_Start, after p7ecx is allocated, if any of the cases in the switch return rv=SECFailure, then the function will return without freeing p7ecx.
Priority: -- → P2
Target Milestone: --- → 3.11.2
Attached patch patch v1Splinter Review
Attachment #224827 - Flags: review?(alexei.volkov.bugs)
Comment on attachment 224827 [details] [diff] [review] patch v1 r=alexei
Attachment #224827 - Flags: review?(alexei.volkov.bugs) → review+
Fix leak in NSS_CMSEncoder_Start error path. Bug 339914. r=alexei.volkov Checking in cmsencode.c; new revision: 1.5.28.1; previous revision: 1.5 Checking in cmsencode.c; new revision: 1.6; previous revision: 1.5
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: CID 574
Summary: leak in NSS_CMSEncoder_Start error paths → Coverity leak in NSS_CMSEncoder_Start error paths
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: