Fix leak in NSS_CMSEncoder_Start error path.  Bug 339914. r=alexei.volkov